# SFML-rpg

./: .gitignore  CMakeLists.txt  SFML-rpg.sln
Docs/: errorcodes.txt
SFML-rpg/: Animator.hpp  CMakeLists.txt  HighAccuracyClock.cpp  Layer.cpp  Layer.hpp  Map.cpp  Map.hpp  SFML-rpg.vcxproj  SFML-rpg.vcxproj.filters  TileLayer.cpp  Tileset.cpp  Tileset.hpp  Utility.hpp  main.cpp  stdafx.h
SFML-rpg/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
SFML-rpg/Map/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  Layer.cpp  Layer.hpp  Map.cpp  Map.hpp  MapUtility.hpp  ObjectLayer.cpp  ObjectLayer.hpp  TextureTile.cpp  TextureTile.hpp  TileLayer.cpp  TileLayer.hpp  Tileset.cpp  Tileset.hpp  Utility.hpp
SFML-rpg/Map/Layers/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  Layer.cpp  Layer.hpp
SFML-rpg/data/Characters/: Untitled character.xcf
SFML-rpg/data/Player sprites/: playerSprite.xcf
SFML-rpg/data/maps/: SFML-rpg.tiled-session  maps.tiled-session  mountain_landscape.json  noge.json  someMap.json  test.json
SFML-rpg/data/maps/templates/: fire.json  rock.json  weirdFire.tx
SFML-rpg/data/tilesets/: tileset.xcf
source/: Animator.cpp  HighAccuracyClock.hpp  SFML-rpg.vcxproj  SFML-rpg.vcxproj.filters  main.cpp  stdafx.h
source/Map/: Chunk.cpp  Chunk.hpp  Map.cpp  TextureTile.cpp  Tileset.hpp
source/data/Characters/: SuperDuperBuffDude.xcf
source/data/maps/: noge.json  someOthertest.json  theUltimateTestMap.json  untitled.json
source/data/maps/templates/: fire.json  fire.tx  spritesheetTemplate.json  weirdFire.json
